--- a/examples/client-side/fancy/index.html
+++ b/examples/client-side/fancy/index.html
@@ -27,7 +27,7 @@
 					Websockets are not supported by this browser.
 				</h2>
 				<p>
-					Please try another browser.  The following browser's support WebSockets.
+					Please try another browser.  The following browsers support WebSockets.
 				</p>
 				<ul>
 					<li>
