--- a/examples/client-side/fancy/index.html
+++ b/examples/client-side/fancy/index.html
@@ -331,7 +331,12 @@
 		
 		<!-- Profile viewer -->
 		<div id="skinProfile-modal" title="Profile" style="display:none;">
-			<div class="elementOverlay">
+			<div id="webGLNotSupported" style="display:none;">
+				<h2>
+					WebGL is not supported by this browser
+				</h2>
+			</div>
+			<div id="elementOverlay" class="elementOverlay">
 				<div>
 					<input id="toggleHelmet" type="checkbox" value="test" checked="checked"/>
 					<span>
@@ -371,14 +376,14 @@
 					</div>
 				</div>
 			</div>
-			<div id="skinWrapper"></div>
+			<div id="skinWrapper">
+			</div>
 		</div>
 		<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
 		<script type="text/javascript" src="js/jquery-ui-1.9.0.custom.min.js"></script>
 		<script type="text/javascript" src="js/three.min.js"></script>
 		<script type="text/javascript" src="js/TrackballControls.js"></script>
-		<script type="text/javascript" src="js/websocketservices.min.js"></script>
-		<script type="text/javascript" src="js/profile.min.js"></script>
-		<script type="text/javascript" src="js/minecraft.js"></script>
+		<script type="text/javascript" src="js/websocketservices.js"></script>
+		<script type="text/javascript" src="js/skinprofile.js"></script>
 	</body>
 </html>
