Added references to the minified library and the missing Minecraft.js library.

--- a/examples/client-side/fancy/index.html
+++ b/examples/client-side/fancy/index.html
@@ -383,7 +383,8 @@
 		<script type="text/javascript" src="js/jquery-ui-1.9.0.custom.min.js"></script>
 		<script type="text/javascript" src="js/three.min.js"></script>
 		<script type="text/javascript" src="js/TrackballControls.js"></script>
-		<script type="text/javascript" src="js/websocketservices.js"></script>
-		<script type="text/javascript" src="js/skinprofile.js"></script>
+		<script type="text/javascript" src="js/websocketservices.min.js"></script>
+		<script type="text/javascript" src="js/skinprofile.min.js"></script>
+		<script type="text/javascript" src="js/minecraft.js"></script>
 	</body>
 </html>
